<resources>
    <string name="app_name">v12</string>
    <string name="font_bold">fonts/googlesansbold.ttf</string>
    <string name="font_medium">fonts/googlesansmedium.ttf</string>
    <string name="font_regular">fonts/googlesansregular.ttf</string>
    <string name="title_error_dialog">Error</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="try_again">Try Again</string>
    <string name="no_internet">No Internet</string>
    <string name="DeleteConfirmation">Delete Confirmation</string>
    <string name="DeleteMessages">Web Logger was deleted successfully</string>
    <string name="Ok">Ok</string>
    <string name="ErrorLogNotDeleted">Error Log could not be deleted</string>
    <string name="DeleteYes">Are you sure you want to clear this logs?</string>
    <string name="ErrorMessages">Error Messages</string>
    <string name="PleaseTryAgain">Please try again</string>
    <string name="ex_lbl_link_sign_up"><a href="#">Sign Up</a></string>
    <string name="ex_lbl_link_login"><a href="#">Login</a></string>

    <string name="ex_hint_Email">Email</string>
    <string name="ex_hint_password">Password</string>
    <string name="ex_hint_confirm_password">Confirm Password</string>
    <string name="ex_lbl_need_an_account">Don\'t have an account?</string>
    <string name="ex_lbl_forgot_your_password">Forgot Password?</string>
    <string name="ex_lbl_retrieve">Retrieve</string>
    <string name="ex_lbl_sign_up">Sign Up</string>
    <string name="ex_lbl_already_member">Already have an account?</string>
    <string name="ex_lbl_login">Login</string>
    <string name="ex_lbl_setting">Setting</string>
    <string name="ex_lbl_user">User</string>
    <string name="ex_lbl_bookmark">Bookmark</string>
    <string name="ex_lbl_search">Search</string>
    <string name="ex_lbl_bottom_navigation">Bottom Navigation</string>
    <string name="ex_lbl_simple_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="ex_lbl_sample_long">
Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.
    </string>
    <string name="lbl_WalkThrough">Walk through</string>
    <string name="lbl_get_started">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="produce_created_successfully">Produce was created successfully</string>
    <string name="created_another_produce">Do you want to create another one?</string>
    <string name="produce_edited">Produce was edited successfully</string>
    <string name="confirmation">Confirmation</string>
    <string name="delete_produce">Are sure you want to delete this Produce?</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="order_success">Thanks your order was placed Successfully</string>
    <string name="social_lbl_type_a_message">Type a message</string>
    <string name="save_messages">Your changes were saved successfully</string>
    <string name="save_confirmation">Confirmation</string>

    <string-array name="dp_unit">
        <item>Kilogram</item>
    </string-array>
</resources>